# sob_layer

./: .clang-format  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  sob_layer.xml
doc/: plot.py
perf/: sob_layer.cpp
src/: sob_layer.cpp
src/sob_layer/: sob_layer.hpp
test/: sob_layer.cpp
