<?xml version="1.0"?>
<package format="2">
  <name>sob_layer</name>
  <version>0.1.1</version>
  <description>Plugin-replacement for the default costmap_2d::InflationLayer.</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>

  <export>
    <costmap_2d plugin="${prefix}/sob_layer.xml" />
  </export>
</package>
